--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,15 @@ jobs:
     strategy:
       matrix:
         python-version: [3.12, 3.9, 3.8]
+
+    env:
+      First_Variable: "true"
     
     steps:
+
+      - name: Print the first variable
+        run: echo $env.First_Variable
+        
       - name: checkout repo content
         uses: actions/checkout@v4 # checkout the repository content
  
