--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: ${{matrix.python-version}}
  
       - name: execute py script # run main.py
-        run: python index.py
+        run: python index.py 5
 
       - name: Run a one-line script
         run: echo Hello, World!
