--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
     
     steps:
 
-      - name: Factorial
-        run: echo "Input: $env.NUM"
+      - name: Factorial of a number
+        run: ${{env.NUM}}
 
       - name: checkout repo content
         uses: actions/checkout@v4 # checkout the repository content
