--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
         python-version: [3.12, 3.9, 3.8]
 
     env:
-      NUM: 5
+      NUM: "5"
     
     steps:
 
       - name: Factorial of a number
-        run: echo "Input: $env.NUM"
+        run: echo "Input: ${{env.NUM}}"
 
       - name: checkout repo content
         uses: actions/checkout@v4 # checkout the repository content
