--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           # python-version: "3.12" # install the python version needed
           python-version: ${{matrix.python-version}}
  
-      - name: execute py script # run main.py
+      - name: execute py script # run index.py
         run: python index.py
 
       - name: Run a one-line script
