--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,9 @@ jobs:
         with:
           # python-version: "3.12" # install the python version needed
           python-version: ${{matrix.python-version}}
- 
-      - name: execute py script # run index.py
+      
+      #job dependencies
+      - needs: execute py script # run index.py
         run: python index.py
 
       - name: Run a one-line script
